--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,12 @@ body {
     font-family: "Montserrat";
     min-width: 360px;
     max-width: 1280px;
-    margin: 0px;
-    padding: 0px;
+    margin: auto;
+    padding-left: 1%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
 }
 
 
@@ -12,8 +16,6 @@ main {
     grid-template-columns: 1fr 2fr;
     grid-template-rows: 19% 16% 18% 18% 21%;
     max-width: 1280px;
-    padding-right: 10%;
-    padding-left: 20%;
     padding-top: 5%;
 
     
@@ -25,6 +27,7 @@ main {
     grid-template-columns: 1fr;
     grid-template-rows: 16% 14% 50% 25% 17%;
     padding: 1%;
+    margin-left: 1%;
     }
 }
 
@@ -52,7 +55,6 @@ header {
     position: relative;
     justify-content: space-between;
     align-items: center;
-    padding: 5%;
     padding-top: 1%;
 }
 .rectangle1 {
@@ -148,8 +150,10 @@ header {
     color: rgb(107, 90, 249);
 }
 .main_div-header{
-    display: grid;
+    display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
+    align-content: center;
 }
 
 .colorful {
@@ -320,6 +324,7 @@ a {
 }
 
 .main_img-content {
+    min-width: 200px;
     max-width: 855px;
     max-height: 569px;
     width: 80%;
